# maimai-search-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml  rust.yaml
benches/: index_benchmark.rs  my_benchmark.rs
examples/: b50.rs
src/: client.rs  database.rs  entity.rs  image_operations.py  lib.rs  maimai_best_50.py  maimaidx.py  main.rs  printer.rs  printer_handler.rs  profiles.rs
src/client/: client.rs
src/clients/: mod.rs  song_data.rs  user_data.rs
src/config/: config.rs  mod.rs  profiles.rs
src/db/: database.rs  entity.rs  mod.rs
src/image/: maimai_best_50.rs  mod.rs  utils.rs
src/service/: client.rs  maimai_best_50.rs  mod.rs  printer.rs  printer_handler.rs  resource.rs  simple_log.rs  table.rs
src/utils/: calculate.rs  file.rs  file_util.rs  image.rs  mod.rs  printer.rs  printer_handler.rs  simple_log.rs
tests/: b50_test.rs  command_test.rs  integration_test.rs
