[package]
authors = ["AnselYuki"]
name = "maimai-search"
version = "0.1.9"
edition = "2021"
repository = "https://github.com/Anselyuki/maimai-search-rs"

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
platform-dirs = "0.3.0"
lazy_static = "1.4.0"
indicatif = "0.17.7"
clap = { version = "4.4.7", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
# 读取配置文件
toml = "0.5"
# 中文分词
jieba-rs = "0.6.8"
# 计算相似度
levenshtein = "1.0.5"
# 表格
prettytable = "0.10.0"

# yaml 配置文件读取
serde_yaml = "0.8.26"
schemars = "0.8.15"

# 打开系统中的文件
open = "2.1.3"

exitcode = "1.1.2"
colored = "1.9.4"

zip = "0.5.13"

# 日志接口
log = "0.4.20"