[package]
authors = ["AnselYuki"]
name = "maimai-search"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/Anselyuki/maimai-search-rs"

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.8.26"
# Benchmark
criterion = "0.3"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
platform-dirs = "0.3.0"
lazy_static = "1.4.0"
# 用于绘制进度条
indicatif = "0.17.7"
# 交互参数构建
clap = { version = "4.4.7", features = ["derive"] }
# 读取配置文件
toml = "0.5"
# 表格
prettytable = "0.10.0"
# 打开系统中的文件
open = "2.1.3"

exitcode = "1.1.2"
colored = "1.9.4"
zip = "0.5.13"
# 日志接口
log = "0.4.20"
# 分词与搜索
tantivy = "0.21.1"
tantivy-jieba = "0.10.0"
zhconv = "0.3.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[[bench]]
name = "my_benchmark"
harness = false