[lib]
name = "maimai_search_lib"
path = "src/lib.rs"

[package]
authors = ["AnselYuki"]
name = "maimai-search"
version = "0.4.4"
edition = "2021"
repository = "https://github.com/Anselyuki/maimai-search-rs"

[dependencies]
# 通用工具
lazy_static = "1.4.0"

# 序列化与反序列化
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.8.26"
strum_macros = "0.25.3"

# Http 请求
reqwest = { version = "0.11.22", features = ["blocking", "json"] }

# 文件处理
open = "2.1.3"
zip = "0.5.13"
platform-dirs = "0.3.0"

# 日志与错误处理
log = "0.4.20"
exitcode = "1.1.2"

# Console 输出依赖
colored = "1.9.4"
indicatif = "0.17.7"
clap = { version = "4.4.7", features = ["derive"] }
prettytable = "0.10.0"

# 分词与搜索
tantivy = "0.21.1"
tantivy-jieba = "0.10.0"
zhconv = "0.3.0"

# 图片处理
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"

[dev-dependencies]
# 单元测试
assert_cmd = "2.0.12"
predicates = "3.0.4"
# Benchmark
criterion = "0.3.6"

[[bench]]
name = "index_benchmark"
harness = false

[[example]]
name = "b50生成"
path = "examples/b50.rs"